--- a/app/page.module.css
+++ b/app/page.module.css
@@ -20,17 +20,16 @@
     max-width: 36rem; /* 36rem = 576px (conforme seu HTML original) */
     margin: 3rem auto; /* Ajuste para o Next.js, 'auto' centraliza */
     padding: 2rem;
-    background-color: #ffffff; /* Este será sobrescrito pelo .section>div */
-    border-radius: 8px; /* Este será sobrescrito pelo .section */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Exemplo, pode ser removido */
+    
 }
 
 .headerLogo { /* Nova classe para a logo no header */
-    width: 15rem;
+    width: 159px;
+    height: 267;
 }
 
 .sectionContainer { /* Nova classe para a div que envolve o conteúdo da seção */
-    background-image: linear-gradient(90deg, #9572fc 0%, #43e7ad 50%, #e2d45c 100%);
+    background-image: linear-gradient(90deg, var(--ColorPrimary-500) 0%, var(--ColorPrimary-200) 50%, var(--ColorPrimary-500) 100%);
     border-radius: 0.625rem;
     padding-top: 4px;
     opacity: 0; /* Para a animação */
@@ -45,6 +44,7 @@
     padding-top: 1.5rem;
     border-radius: 0.5rem;
     background-color: #2a2634;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Exemplo, pode ser removido */
 }
 
 .sectionTitle { /* Nova classe para h2 */
@@ -89,19 +89,20 @@
 .askButton { /* Nova classe para o botão */
     width: 100%;
     border: 0;
-    background-image: linear-gradient(156deg, #9572fc 0%, #43e7ad 50%, #e2d45c 100%);
+    background-image: linear-gradient(156deg, var(--ColorActions-new) 0%, var(--ColorNeutral-n800)    );
     padding: 0.675rem;
     border-radius: 0.5rem;
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 0.12px;
     transition: all 0.3s;
+    color: var(--ColorNeutral-n100);
 }
 
 .askButton:hover:not(:disabled) { /* Ajuste do hover para React */
     cursor: pointer;
     transform: translateY(-2px);
-    box-shadow: 0 5px 1rem rgba(255, 248, 107, 0.2);
+    box-shadow: 0 5px 1rem rgba(3, 255, 242, 0.253);
 }
 
 .askButton:disabled {
